RESOLVED FIXED267204
Fix warnings found by compiling with -Wdeprecated-enum-enum-conversion
https://bugs.webkit.org/show_bug.cgi?id=267204
Summary Fix warnings found by compiling with -Wdeprecated-enum-enum-conversion
David Kilzer (:ddkilzer)
Reported 2024-01-07 08:33:20 PST
Fix warnings found by compiling with -Wdeprecated-enum-enum-conversion. Examples: Source/WebCore/platform/graphics/cg/ImageBackingStoreCG.cpp:52:193: error: bitwise operation between different enumeration types ('CGImageAlphaInfo' and 'CGImageByteOrderInfo') is deprecated [-Werror,-Wdeprecated-enum-enum-conversion] 52 | return adoptCF(CGImageCreate(width, height, bitsPerComponent, bytesPerPixel * 8, bytesPerRow, colorSpace.get(), (m_premultiplyAlpha ? kCGImageAlphaPremultipliedFirst : kCGImageAlphaFirst) | kCGImageByteOrder32Little, dataProvider.get(), nullptr, true, kCGRenderingIntentDefault)); | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ^ ~~~~~~~~~~~~~~~~~~~~~~~~~ 1 error generated. Source/WebKitLegacy/mac/WebCoreSupport/PopupMenuMac.mm:99:116: error: arithmetic between different enumeration types ('NSWritingDirection' and 'NSWritingDirectionFormatType') is deprecated [-Werror,-Wdeprecated-enum-enum-conversion] 99 | RetainPtr<NSNumber> writingDirectionValue = adoptNS([[NSNumber alloc] initWithInteger:writingDirection + NSWritingDirectionOverride]); | ~~~~~~~~~~~~~~~~ ^ ~~~~~~~~~~~~~~~~~~~~~~~~~~ 1 error generated. Source/WebKit/UIProcess/mac/WebPopupMenuProxyMac.mm:86:120: error: arithmetic between different enumeration types ('NSWritingDirection' and 'NSWritingDirectionFormatType') is deprecated [-Werror,-Wdeprecated-enum-enum-conversion] 86 | RetainPtr<NSNumber> writingDirectionValue = adoptNS([[NSNumber alloc] initWithInteger:writingDirection + NSWritingDirectionOverride]); | ~~~~~~~~~~~~~~~~ ^ ~~~~~~~~~~~~~~~~~~~~~~~~~~ 1 error generated. Tools/TestWebKitAPI/cocoa/CGImagePixelReader.cpp:40:54: error: bitwise operation between different enumeration types ('CGImageAlphaInfo' and 'CGImageByteOrderInfo') is deprecated [-Werror,-Wdeprecated-enum-enum-conversion] 40 | auto bitmapInfo = kCGImageAlphaPremultipliedLast | kCGImageByteOrder32Big; | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ^ ~~~~~~~~~~~~~~~~~~~~~~ 1 error generated.
Attachments
Radar WebKit Bug Importer
Comment 1 2024-01-07 08:33:45 PST
David Kilzer (:ddkilzer)
Comment 2 2024-01-07 08:37:45 PST
EWS
Comment 3 2024-01-07 15:45:43 PST
Committed 272749@main (a99abdd48615): <https://commits.webkit.org/272749@main> Reviewed commits have been landed. Closing PR #22486 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.