Fix warnings found by compiling with -Wdeprecated-enum-enum-conversion https://bugs.webkit.org/show_bug.cgi?id=267204 <rdar://120609798>

Reviewed by Wenson Hsieh.

* Source/WebKit/UIProcess/mac/WebPopupMenuProxyMac.mm:
(WebKit::WebPopupMenuProxyMac::populate):
* Source/WebKitLegacy/mac/WebCoreSupport/PopupMenuMac.mm:
(PopupMenuMac::populate):
- Use static_cast<NSInteger>() operators to combine two different enum
  type values.

* Source/WebCore/platform/graphics/cg/ImageBackingStoreCG.cpp:
(WebCore::ImageBackingStore::image const):
* Tools/TestWebKitAPI/Tests/WebKitCocoa/WKRequestActivatedElementInfo.mm:
(TestWebKitAPI::TEST):
* Tools/TestWebKitAPI/cocoa/CGImagePixelReader.cpp:
(TestWebKitAPI::CGImagePixelReader::CGImagePixelReader):
- Use IGNORE_WARNINGS_BEGIN("deprecated-enum-enum-conversion")/IGNORE_WARNINGS_END
  when computing a CGBitmapInfo value before calling CGImageCreate().

Canonical link: https://commits.webkit.org/272749@main